LP #566594: Help text for imagedrawer.

--- a/karl/views/static/tiny_mce/plugins/imagedrawer/imagedrawer_dialog_snippet.html
+++ b/karl/views/static/tiny_mce/plugins/imagedrawer/imagedrawer_dialog_snippet.html
@@ -26,33 +26,32 @@
 
   <div style="height: 445px;" class="ui-widget-content ui-corner-all tiny-imagedrawer-panel tiny-imagedrawer-panel-help">
 
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dui tellus,
-      bibendum id tincidunt quis, adipiscing in ipsum. Praesent eu leo nisl.
-      Curabitur accumsan placerat mauris, vulputate tincidunt nunc porttitor
-      suscipit. Suspendisse aliquet velit vitae lectus eleifend non dapibus massa
-      congue. Morbi eu sem nisi. Integer arcu odio, suscipit eu ultricies eget,
-      aliquam eget ligula. Fusce at tortor a ipsum pellentesque ultrices nec nec
-      augue. Suspendisse sodales consectetur elementum. Phasellus a nibh nunc.
-      Vestibulum eget sem at felis varius molestie. Duis rutrum porta aliquam.
-      Suspendisse bibendum dui ut diam aliquet non iaculis ante faucibus.
-      Curabitur sit amet orci nulla! Pellentesque in sagittis ante. Ut porttitor
-      sollicitudin fringilla. Proin sed eros tortor, nec luctus risus! Curabitur
-      adipiscing ullamcorper convallis. Class aptent taciti sociosqu ad litora
-      torquent per conubia nostra, per inceptos himenaeos.
+    <p>The image tool helps the process of including images into
+    documents such as wiki pages.  Specifically, the image tool
+    simplifies the process of adding new images, then makes finding
+    the correct image as easy as possible.
     </p>
     <p>
-      Aliquam tincidunt lacus id augue eleifend vulputate. Nulla sodales, sem ac
-      fermentum ultrices, nulla arcu viverra justo, nec venenatis lectus purus eu
-      neque. Praesent nec ornare quam. Fusce arcu lectus, porttitor id fermentum
-      quis, ullamcorper et sapien. Pellentesque sagittis, urna id feugiat varius,
-      nulla diam luctus eros; sit amet venenatis sem nisl a enim. Vivamus lacus nisi,
-      faucibus ut interdum et, lacinia a metus. Sed eget ante ipsum, pellentesque
-      blandit mauris. Fusce tincidunt ultricies ante, eget tempus turpis vulputate
-      sed. Cras congue tincidunt elit, at ullamcorper nulla sagittis id. Aenean
-      consequat quam nec ante rhoncus hendrerit. Fusce egestas hendrerit eleifend.
-      Cras id risus vitae enim sodales sodales sed quis elit. Phasellus hendrerit mi
-      leo? Vestibulum rutrum feugiat sem sed volutpat.</p>
+      First, the image tool breaks the task into a narrower focus by
+      concentrating on the <em>source</em> of the image.  You might be
+      uploading a new image, or choosing an image you recently
+      uploaded into the system.  The image might be elsewhere in the
+      community, or on another website.  Each of these are "sources"
+      with a unique screen for that task.
+    </p>
+    <p>When uploading a new image, the image is stored directly inside
+    the document.  You don't have to go to a folder, upload the image,
+    then go back to editing the document.  The image can be previewed
+    before inserting into the document, and some basic settings
+    edited.  For example, you can choose the size of the "thumbnail"
+    image to display in the document.  The image will then be a
+    hyperlink to view the full-size image.
+    </p>
+    <p>The "My Recent" and "This Community" sources provide a
+    high-speed facility for navigating through a potentially-large
+    collection of images.</p>
+    <p>The "Web" source allows previewing an image on the Internet
+    outside of the system, then referencing it in your document.</p>
     
     <div class="karl-buttonset tiny-imagedrawer-buttonset-cancelhelp">
       <button class="ui-icon-transferthick-e-w">Back</button>
