reduced width on login username input for IE6, so it doesn't   fall to the next line.  Set margin on surrounding field as   !important, because elements were jumping after focus was moved   away (LP #611017)

--- a/karl/views/static/themedstyles.css
+++ b/karl/views/static/themedstyles.css
@@ -1501,7 +1501,7 @@ img#login-gradient {
   padding: 28px 110px 40px;
 }
 #inner .field {
-  margin: 1em 0 1.5em;
+  margin: 1em 0 1.5em !important;
 }
 
 body#login-wrapper #inner h2 {
