Put in deprecation notice for IE6 (LP #616869)

--- a/karl/views/static/themedstyles.css
+++ b/karl/views/static/themedstyles.css
@@ -502,6 +502,12 @@ a.chparent:hover {
   float: left;
   margin-left: 15px;
 }
+.ie-announcement {
+    float: left;
+    margin-left: 15px;
+    border-color: #ff0000;
+    background-color: #F2C3C2;
+}
 
 /** =LAYOUT STRUCTURE
 ----------------------------------------------- */
