Tags: set label to not look like a button, made tags, input   and button same height and/or centered vertically   (LP #622689)

--- a/karl/views/static/karl_ie.css
+++ b/karl/views/static/karl_ie.css
@@ -336,8 +336,12 @@ ul.menubar .menubar-lastitem a:active {
 /* add tag button */
 .addtag-button {
     position: relative;
+    margin-top: -1px !important;
 }
-    
+#tag-inputbox ul.autobox-hldr,
+#tags--field ul.autobox-hldr {
+    overflow: visible;
+}
 /* specific button color bg */
 .cheader button.normal_button span {
     background-color: #cedfef;
