feeds: info box closes if clicked outside.

--- a/karl/views/static/karl-plugins/karl-contentfeeds/test.html
+++ b/karl/views/static/karl-plugins/karl-contentfeeds/test.html
@@ -13,6 +13,7 @@
       <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/themes/smoothness/jquery-ui.css" />
       <script type="text/javascript" src="http://github.com/philikon/MockHttpRequest/raw/master/lib/mock.js">//</script>
       <script type="text/javascript" src="http://greenfinity.hu/pub/js.moremocks/trunk/moremockhttp.js"></script>
+      <script type="text/javascript" src="http://github.com/eduardolundgren/jquery-simulate/raw/master/jquery.simulate.js">//</script>
     
       <!-- Test suite -->
       <script type="text/javascript" src="http://github.com/jquery/qunit/raw/master/qunit/qunit.js"></script>
