Javascript housekeeping. Move our own stuff to where it belongs. This is no change in code or composition, just moving things around and updating references as needed.

--- a/karl/views/static/karl-plugins/karl-datetimepicker/demo_test.html
+++ b/karl/views/static/karl-plugins/karl-datetimepicker/demo_test.html
@@ -22,11 +22,11 @@
       <link rel="stylesheet" href="karl.datetimepicker.css"/>
       <!-- XXX Followings are needed to support other code in karl.js             --> 
       <!-- XXX Better organizing would render it unnecessary to include them here -->
-      <script src="../grid/ui/ui.grid.js" type="text/javascript">//</script>
-      <script src="../grid/ui/ui.gridmodel.js" type="text/javascript">//</script>
-      <script src="../autobox2/jquery.templating.js" type="text/javascript">//</script>
-      <script src="../autobox2/jquery.ui.autobox.ext.js" type="text/javascript">//</script>
-      <script src="../autobox2/jquery.ui.autobox.js" type="text/javascript">//</script>
+      <script src="../../jquery-ui/grid/ui/ui.grid.js" type="text/javascript">//</script>
+      <script src="../../jquery-ui/grid/ui/ui.gridmodel.js" type="text/javascript">//</script>
+      <script src="../../jquery-ui/autobox2/jquery.templating.js" type="text/javascript">//</script>
+      <script src="../../jquery-ui/autobox2/jquery.ui.autobox.ext.js" type="text/javascript">//</script>
+      <script src="../../jquery-ui/autobox2/jquery.ui.autobox.js" type="text/javascript">//</script>
       <script src="../karl-captionedimage/karl.captionedimage.js" type="text/javascript">//</script>
       <script src="../../jquery-plugins/DD_roundies.src.js" type="text/javascript">//</script>
       <script src="../../karl.js" type="text/javascript" ></script>
