--- a/karl/views/static/testing.html
+++ b/karl/views/static/testing.html
@@ -46,29 +46,29 @@
 
     <ul>
       <li>
-        <a href="jquery-ui/karl-buttonset/demo.html">Demo</a>
-        <a href="jquery-ui/karl-buttonset/demo_test.html">Qunit</a>
+        <a href="karl-plugins/karl-buttonset/demo.html">Demo</a>
+        <a href="karl-plugins/karl-buttonset/demo_test.html">Qunit</a>
         karl.buttonset
       </li>
       <li>
-        <a href="jquery-ui/karl-captionedimage/demo.html">Demo</a>
-        <a href="jquery-ui/karl-captionedimage/demo_test.html">Qunit</a>
+        <a href="karl-plugins/karl-captionedimage/demo.html">Demo</a>
+        <a href="karl-plugins/karl-captionedimage/demo_test.html">Qunit</a>
         karl.captionedimage
       </li>
       <li>
-        <a href="jquery-ui/karl-slider/demo.html">Demo</a>
-        <a href="jquery-ui/karl-slider/demo_test.html">Qunit</a>
-        <a href="jquery-ui/karl-slider/demo_test_regression.html">Qunit regression</a>
+        <a href="karl-plugins/karl-slider/demo.html">Demo</a>
+        <a href="karl-plugins/karl-slider/demo_test.html">Qunit</a>
+        <a href="karl-plugins/karl-slider/demo_test_regression.html">Qunit regression</a>
         karl.slider
       </li>
       <li>
-        <a href="jquery-ui/ui-multistatusbox/demo.html">Demo</a>
-        <a href="jquery-ui/ui-multistatusbox/demo_test.html">Qunit</a>
-        ui.multistatusbox
+        <a href="karl-plugins/karl-multistatusbox/demo.html">Demo</a>
+        <a href="karl-plugins/karl-multistatusbox/demo_test.html">Qunit</a>
+        karl.multistatusbox
       </li>
       <li>
-        <a href="jquery-ui/karl-datetimepicker/demo.html">Demo</a>
-        <a href="jquery-ui/karl-datetimepicker/demo_test.html">Qunit</a>
+        <a href="karl-plugins/karl-datetimepicker/demo.html">Demo</a>
+        <a href="karl-plugins/karl-datetimepicker/demo_test.html">Qunit</a>
         karl.datetimepicker
       </li>
       <li>
