--- a/karl/views/static/karl-plugins/karl-multistatusbox/demo.html
+++ b/karl/views/static/karl-plugins/karl-multistatusbox/demo.html
@@ -13,8 +13,8 @@
       <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/themes/smoothness/jquery-ui.css" />
 
       <!-- The widget plugin JS and CSS -->
-      <link rel="stylesheet" href="ui.multistatusbox.css"/>
-      <script src="ui.multistatusbox.js" type="text/javascript" ></script>
+      <link rel="stylesheet" href="karl.multistatusbox.css"/>
+      <script src="karl.multistatusbox.js" type="text/javascript" ></script>
 
       <!-- Page specific JS and CSS -->
       <link rel="stylesheet" href="demo.css"/>
@@ -25,7 +25,7 @@
     <h1>MultiStatusBox Demo</h1>
 
     <div id="statusbox" class="ui-widget">
-      <div class="ui-multistatusbox-item ui-state-highlight ui-corner-all">A message that came with the page</div>
+      <div class="karl-multistatusbox-item ui-state-highlight ui-corner-all">A message that came with the page</div>
     </div>
 
     <p>
