--- a/karl/views/static/karl-plugins/karl-multistatusbox/demo_test.html
+++ b/karl/views/static/karl-plugins/karl-multistatusbox/demo_test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
   <head>
-      <title>ui.multistatusbox tests</title>
+      <title>karl.multistatusbox tests</title>
 
       <!-- Load jQuery and jQuery UI, both JS and CSS -->
       <script src="http://www.google.com/jsapi"
@@ -17,8 +17,8 @@
       <link rel="stylesheet" href="http://github.com/jquery/qunit/raw/master/qunit/qunit.css" />
 
       <!-- The widget plugin JS and CSS -->
-      <script src="ui.multistatusbox.js" type="text/javascript"></script>
-      <link rel="stylesheet" href="ui.multistatusbox.css"/>
+      <script src="karl.multistatusbox.js" type="text/javascript"></script>
+      <link rel="stylesheet" href="karl.multistatusbox.css"/>
 
       <!-- Page specific JS and CSS -->
       <script src="demo_test.js" type="text/javascript"></script>
@@ -27,7 +27,7 @@
   </head>
 
   <body>
-    <h1 id="qunit-header">ui.multistatusbox tests</h1>  
+    <h1 id="qunit-header">karl.multistatusbox tests</h1>  
     <h2 id="qunit-banner"></h2>  
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>  
@@ -37,7 +37,7 @@
       <h1>MultiStatusBox Demo</h1>
 
       <div id="statusbox" class="ui-widget">
-        <div class="ui-multistatusbox-item ui-state-highlight ui-corner-all">A message that came with the page</div>
+        <div class="karl-multistatusbox-item ui-state-highlight ui-corner-all">A message that came with the page</div>
       </div>
 
       <p>
