gave profile body a set width, so it doesn't fall out of its area in IE (LP #638326)

--- a/karl/views/static/themedstyles.css
+++ b/karl/views/static/themedstyles.css
@@ -1658,6 +1658,7 @@ ul.tagUsersList li {
 }
 .profile_page_body div.wrapper {
 	margin-left: 113px;
+	width: 591px;
 }
 .profile_page_body div p span {
 	display: inline;
