add demo for testing the media button (current tinymce version)

--- a/karl/views/static/testing.html
+++ b/karl/views/static/testing.html
@@ -87,6 +87,10 @@
         'karl' editor skin (with 'advanced' theme)
       </li>
       <li>
+        <a href="tinymce/3.3.8/plugins/embedmedia/tests/demo.html">Demo</a>
+        embedmedia (media button)
+      </li>
+      <li>
         <a href="tinymce/3.3.8/plugins/wicked/tests/demo.html">Demo</a>
         <a href="tinymce/3.3.8/plugins/wicked/tests/test.html">Qunit</a>
         wicked
